# data-testid-guidelines

./: .eslintrc.js  .gitignore  PROJECT_STRUCTURE.md  README-ES.md  README-FR.md  README-JP.md  README-LG.md  README-PTBR.md  README-RU.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  verify-fix.js
examples/: .gitignore  .gitignore copy  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
examples-babel-plugin/: README.md  babel.config.cjs  index.html  jest.config.cjs  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
examples-babel-plugin/src/: App.tsx  index.css
examples-babel-plugin/src/__tests__/: App.test.tsx  UserCard.test.tsx
examples-babel-plugin/src/components/: ContactForm.tsx  Navigation.tsx  ProductCard.tsx  TodoList.tsx  (+1 more)
examples-nextjs/: README.md  jest.config.js  next.config.js  package-lock.json  package.json  swc_plugin_auto_testid.wasm  test-babel-plugin.js  webpack-auto-testid-loader.js
examples-nextjs-test/: next.config.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
examples/nextjs-babel/: .babelrc  README.md  debug-loop.js  final-demo.js  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  test-plugin.js
examples/src/: App.tsx  index.css  main.tsx
helpers/: WithTestId.test.tsx
plugins/: README.md  babel-plugin-auto-testid.js  package.json  vite-plugin-auto-testid.js  webpack-auto-testid-loader.js  webpack-plugin-auto-testid.js
src/: index.tsx
swc-plugin-auto-testid/: .gitignore  Cargo.toml  README.md
(+15 files in other folders)
