[package]
name = "swc-plugin-auto-testid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
swc_core = { version = "0.90", features = ["ecma_plugin_transform"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
# This removes more dead code
codegen-units = 1
lto = true
# Optimize for size
opt-level = "s"
# Strip debug symbols
strip = true
